Fixes #159: Allow the specific for reasons to change. Submitted by tom (with modifications).
git-svn-id: https://svn.clinovo.com/clincapture/trunk@145 14881f01-568e-124b-961a-bb94932aa8d1